resources/static/style.css
html, body {
  height: 100%;
  color: black;
}
body {
  background-color: #f9f9f9;
  font: 95% helvetica,arial,freesans,clean,sans-serif;
  *font-size: small;
}
a {
  color: #1A6BB2;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
#main {
  margin: 1em 2em;
}
.topnav {
  float: right;
  font-weight: bold;
}
.topnav ul {
  display: inline;
}
.topnav ul li {
  display: inline;
  margin-left: 0.8em;
}
#repo-list {
  margin-left: 1em;
  font-size: 1.2em;
}
#repo-list .repo-name {
  font-weight: bold;
}
h1 {
  font-size: 3em;
  font-weight: bold;
  margin-bottom: 0.5em;
}
h1 .ship {
  color: #036;
}
h2 {
  font-size: 2em;
  color: #333;
  margin-bottom: 0.4em;
}
li {
  margin-bottom: 0.4em;
}
table {
  font-size: inherit;
}
input[type=text], input[type=password], input[type=image], textarea {
  font: 99% helvetica,arial,freesans,sans-serif;
}
select,option {
  padding: 0 .25em;
}
optgroup {
  margin-top: .5em;
}
input.text {
  padding: 1px 0;
}

